--- a/src/index.html
+++ b/src/index.html
@@ -50,10 +50,10 @@
                     </li>
                     <div>
                         <div>
-                            <li  onclick="menu1()" class="p-2 lg:hidden ">
+                            <li  onclick="menu1()" class="p-4 lg:hidden ">
                                 <img id="imgg" src="img/menu.png" alt="">
                             </li>
-                            <ul id="menu" class=" absolute  hidden items-center gap-2">
+                            <ul id="menu" class=" absolute  hidden items-center gap-2 mr-2">
                                 <li class=""><a href="#home"
                                         class="p-2 sm:p-4 hover:text-orange-500 transition-colors ">Home</a></li>
                                 <li class=""><a href="#about"
