--- a/src/index.html
+++ b/src/index.html
@@ -279,16 +279,30 @@
         </div>
 
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6">
-            <div class="card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center ">
-                <img src="img/p_1_weather_check.png" alt="Project" class="w-full mb-4 rounded ">
+            <div
+                class=" group  card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center hover:bg-amber-600 max-h-[400px] ">
+                <img src="img/p_1.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">Weather Checking site</h2>
-                <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
-                    consequatur.</p>
+                <p class="text-sm   group-hover:hidden">Lorem ipsum, dolor sit amet consectetur adipisicing
+                    elit. Tenetur,
+                    consequatur.
+                </p>
+
+                <div class="  opacity-0 group-hover:opacity-100 gap-2 p-4 ">
+                    <div>
+
+                        <button class="p-2 border rounded-xl"><a href="#">Github</a></button>
+                        <button class="p-2 border rounded-xl"><a href="#">Live Demo</a></button>
+                    </div>
+                    <div class="my-2">
+                        <button class="p-2 border rounded-xl"><a href="#">Watch Demo </a></button>
+                    </div>
+                </div>
             </div>
 
             <div
                 class=" group  card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center hover:bg-amber-600 max-h-[400px] ">
-                <img src="img/p_1_weather_check.png" alt="Project" class="w-full mb-4 rounded">
+                <img src="img/p_2.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">x-clone</h2>
                 <p class="text-sm   group-hover:hidden">Lorem ipsum, dolor sit amet consectetur adipisicing
                     elit. Tenetur,
