--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
                             class="p-2 sm:p-4 hover:text-orange-500 transition-colors">Contacts</a></li>
                     <li class="p-2">
                         <button onclick="toggole()" id="darkModeToggle"
-                            class="p-2 rounded-lg hover:bg-gray-200 dark:hover:bg-gray-800 transition-colors"
+                            class="p-2 rounded-lg hover:bg-gray-200 dark:hover:bg-gray-800 transition-colors cursor-pointer"
                             data-testid="button-dark-mode-toggle" aria-label="Toggle dark mode">
                             <svg id="sunIcon" class="w-6 h-6 " fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -110,7 +110,7 @@
                 solving real-world problems
             </p>
             <button
-                class="bg-orange-500 hover:bg-orange-600 transition-colors text-lg sm:text-xl px-6 py-3 my-2 rounded">Download
+                class="bg-orange-500 hover:bg-orange-700 transition-colors text-lg sm:text-xl px-6 py-3 my-2 rounded">Download
                 CV</button>
 
         </div>
@@ -288,7 +288,7 @@
                     consequatur.
                 </p>
 
-                <div class="  opacity-0 group-hover:opacity-100 gap-2 p-4 ">
+                <div class=" opacity-0 group-hover:opacity-100 gap-2 p-4 ">
                     <div>
 
                         <button class="p-2 border rounded-xl"><a href="#">Github</a></button>
@@ -300,8 +300,7 @@
                 </div>
             </div>
 
-            <div
-                class=" group  card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center hover:bg-amber-600 max-h-[400px] ">
+            <div class=" group  card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center active:bg-amber-600 hover:bg-amber-600 max-h-[400px] ">
                 <img src="img/p_2.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">x-clone</h2>
                 <p class="text-sm   group-hover:hidden">Lorem ipsum, dolor sit amet consectetur adipisicing
