--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Debabrata Paul - Software Engineer Portfolio</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="style.css">
 
 
 </head>
@@ -110,7 +111,7 @@
                 solving real-world problems
             </p>
             <button
-                class="bg-orange-500 hover:bg-orange-700 transition-colors text-lg sm:text-xl px-6 py-3 my-2 rounded">Download
+                class="class1 bg-orange-500 hover:bg-orange-700 transition-colors text-lg sm:text-xl px-6 py-3 my-2 rounded">Download
                 CV</button>
 
         </div>
