--- a/src/index.html
+++ b/src/index.html
@@ -221,7 +221,7 @@
             </div>
 
             <div
-                class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
+                class=" class2 card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block h-20" src="img/app.png" alt="App icon">
                 <h2 class="text-lg font-semibold mb-2">APP</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
@@ -229,14 +229,14 @@
             </div>
 
             <div
-                class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
+                class=" class2 card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/UI.png" alt="UI icon">
                 <h2 class="text-lg font-semibold mb-2">UI</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
                     consequatur.</p>
             </div>
             <div
-                class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
+                class="class2 card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/UI.png" alt="UI icon">
                 <h2 class="text-lg font-semibold mb-2">UI</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
@@ -279,7 +279,7 @@
                 data-testid="button-filter-app">UI & UX</button>
         </div>
 
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6">
+        <div class=" class2 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6">
             <div
                 class=" group  card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center hover:bg-amber-600 max-h-[400px] ">
                 <img src="img/p_1.png" alt="Project" class="w-full mb-4 rounded">
@@ -301,7 +301,7 @@
                 </div>
             </div>
 
-            <div class=" group  card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center active:bg-amber-600 hover:bg-amber-600 max-h-[400px] ">
+            <div class=" class2 group  card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center active:bg-amber-600 hover:bg-amber-600 max-h-[400px] ">
                 <img src="img/p_2.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">x-clone</h2>
                 <p class="text-sm   group-hover:hidden">Lorem ipsum, dolor sit amet consectetur adipisicing
