--- a/src/index.html
+++ b/src/index.html
@@ -279,9 +279,9 @@
                 data-testid="button-filter-app">UI & UX</button>
         </div>
 
-        <div class=" class2 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6">
+        <div class="  grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6">
             <div
-                class=" group  card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center hover:bg-amber-600 max-h-[400px] ">
+                class="class2 group  card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center hover:bg-amber-600 max-h-[400px] ">
                 <img src="img/p_1.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">Weather Checking site</h2>
                 <p class="text-sm   group-hover:hidden">Lorem ipsum, dolor sit amet consectetur adipisicing
