--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
                 solving real-world problems
             </p>
             <button
-                class="class1 bg-orange-500 hover:bg-orange-700 transition-colors text-lg sm:text-xl px-6 py-3 my-2 rounded">Download
+                class="class1 bg-orange-500 hover:bg-orange-700  border-black transition-colors text-lg sm:text-xl px-6 py-3 my-2 rounded">Download
                 CV</button>
 
         </div>
