--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                     </li>
                     <div>
                         <div>
-                            <li  onclick="menu1()" class="p-4 lg:hidden ">
+                            <li onclick="menu1()" class="p-4 lg:hidden ">
                                 <img id="imgg" src="img/menu.png" alt="">
                             </li>
                             <ul id="menu" class=" absolute  hidden items-center gap-2 mr-2">
@@ -59,7 +59,7 @@
                                         class="p-2 sm:p-4 hover:text-orange-500 transition-colors ">Home</a></li>
                                 <li class=""><a href="#about"
                                         class="p-2 sm:p-4 hover:text-orange-500 transition-colors ">About
-                                        </a></li>
+                                    </a></li>
                                 <li class=""><a href="#services"
                                         class="p-2 sm:p-4 hover:text-orange-500 transition-colors">Services</a></li>
                                 <li class=""><a href="#projects"
@@ -281,15 +281,15 @@
 
         <div class="  grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6">
             <div
-                class="class2 group  card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center hover:bg-amber-600 max-h-[400px] ">
+                class="class2 class3  card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center max-h-[400px] ">
                 <img src="img/p_1.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">Weather Checking site</h2>
-                <p class="text-sm   group-hover:hidden">Lorem ipsum, dolor sit amet consectetur adipisicing
+                <p class="class4 text-sm ">Lorem ipsum, dolor sit amet consectetur adipisicing
                     elit. Tenetur,
                     consequatur.
                 </p>
 
-                <div class=" opacity-0 group-hover:opacity-100 gap-2 p-4 ">
+                <div class="hidden  gap-2 p-4 ">
                     <div>
 
                         <button class="p-2 border rounded-xl"><a href="#">Github</a></button>
@@ -301,15 +301,16 @@
                 </div>
             </div>
 
-            <div class=" class2 group  card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center active:bg-amber-600 hover:bg-amber-600 max-h-[400px] ">
+            <div
+                class="class2   card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center max-h-[400px] ">
                 <img src="img/p_2.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">x-clone</h2>
-                <p class="text-sm   group-hover:hidden">Lorem ipsum, dolor sit amet consectetur adipisicing
+                <p class="text-sm  class3">Lorem ipsum, dolor sit amet consectetur adipisicing
                     elit. Tenetur,
                     consequatur.
                 </p>
 
-                <div class="  opacity-0 group-hover:opacity-100 gap-2 p-4 ">
+                <div class=" hidden gap-2 p-4 ">
                     <div>
 
                         <button class="p-2 border rounded-xl"><a href="#">Github</a></button>
