--- a/src/index.html
+++ b/src/index.html
@@ -76,23 +76,6 @@
 
 
             </div>
-            <!-- <div>
-
-                    <ul class=" items-center gap-2">
-                        <li class=""><a href="#home"
-                                class="p-2 sm:p-4 hover:text-orange-500 transition-colors ">Home</a></li>
-                        <li class=""><a href="#about" class="p-2 sm:p-4 hover:text-orange-500 transition-colors ">About
-                                me</a></li>
-                        <li class=""><a href="#services"
-                                class="p-2 sm:p-4 hover:text-orange-500 transition-colors">Services</a></li>
-                        <li class=""><a href="#projects"
-                                class="p-2 sm:p-4 hover:text-orange-500 transition-colors">Projects</a></li>
-                        <li class=""><a href="#contact"
-                                class="p-2 sm:p-4 hover:text-orange-500 transition-colors">Contacts</a></li>
-                        <li class="p-2">
-                    </ul>
-
-                </div> -->
         </div>
     </nav>
 
@@ -128,7 +111,7 @@
                                 alt="LinkedIn"></a></li>
                     <li><a href="mailto:mr.debabratapaul2006@gmail.com?subject=Hello%20Debabrata&body=Hi%20there"
                             target="_blank" class="hover:opacity-80 transition-opacity"><img class="w-8 h-8"
-                                src="img/mail.png" alt="Mail"></a></li>
+                                src="img/im.jpg" alt="Mail"></a></li>
                     <li><a href="https://www.instagram.com/mr.debabratapaul?igsh=YzljYTk1ODg3Zg==" target="_blank"
                             class="hover:opacity-80 transition-opacity"><img class="w-8 h-8" src="img/I.png"
                                 alt="Instagram"></a></li>
@@ -140,17 +123,45 @@
         </div>
     </section>
 
-    <hr class="max-w-7xl mx-auto">
+
 
 
 
     <section id="about"
-        class="my-12 sm:my-20 flex flex-col lg:flex-row-reverse justify-between items-center gap-8 p-4 max-w-7xl mx-auto ">
+        class="my-12 sm:my-20 flex flex-col lg:flex-row justify-between items-center gap-8 p-4 max-w-7xl mx-auto">
+
+        <div class="hidden lg:block ml-20" >
+            <div class="w-full lg:w-1/2 flex flex-col items-center gap-4  ">
+                <div class="bg-white rounded-full w-64 h-64 sm:w-80 sm:h-80 overflow-hidden">
+                    <img src="img/circle photo.png" alt="Profile picture" class="w-full h-full object-cover">
+                </div>
+
+                <div>
+                    <ul class="flex gap-4 p-2">
+                        <li><a href="https://www.linkedin.com/in/debabrata2024" target="_blank"
+                                class="hover:opacity-80 transition-opacity"><img class="w-8 h-8" src="img/L.png"
+                                    alt="LinkedIn"></a></li>
+                        <li><a href="mailto:mr.debabratapaul2006@gmail.com?subject=Hello%20Debabrata&body=Hi%20there"
+                                target="_blank" class="hover:opacity-80 transition-opacity"><img class="w-8 h-8"
+                                    src="img/im.jpg" alt="Mail"></a></li>
+                        <li><a href="https://www.instagram.com/mr.debabratapaul?igsh=YzljYTk1ODg3Zg==" target="_blank"
+                                class="hover:opacity-80 transition-opacity"><img class="w-8 h-8" src="img/I.png"
+                                    alt="Instagram"></a></li>
+                        <li><a href="https://wa.me/919093013606?text=Hello%20Debabrata%2C%20I%20want%20to%20connect%20with%20you"
+                                target="_blank" class="hover:opacity-80 transition-opacity"><img class="w-8 h-8"
+                                    src="img/w.png" alt="Whatshapp"></a></li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+
 
         <div class="w-full lg:w-1/2 text-center lg:text-left">
             <h1 class="text-3xl sm:text-4xl font-bold mb-4">About me</h1>
             <p class="my-4 text-base sm:text-lg max-w-2xl mx-auto lg:mx-0">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed odit corporis voluptas eveniet magni unde
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed odit corporis voluptas eveniet magni
+                unde
                 cumque laboriosam distinctio, accusamus odio?
             </p>
             <div class="space-y-4 max-w-md mx-auto lg:mx-0">
@@ -177,28 +188,9 @@
                 </div>
             </div>
         </div>
-        <div class="w-full lg:w-1/2 flex flex-col items-center gap-4  ">
-            <div class="bg-white rounded-full w-64 h-64 sm:w-80 sm:h-80 overflow-hidden hidden lg:block ">
-                <img src="img/circle photo.png" alt="Profile picture" class="w-full h-full object-cover">
-            </div>
 
-            <div class="hidden lg:block ">
-                <ul class="flex gap-4 p-2 ">
-                    <li><a href="https://www.linkedin.com/in/debabrata2024" target="_blank"
-                            class="hover:opacity-80 transition-opacity"><img class="w-8 h-8" src="img/l.png"
-                                alt="LinkedIn"></a></li>
-                    <li><a href="mailto:mr.debabratapaul2006@gmail.com?subject=Hello%20Debabrata&body=Hi%20there"
-                            target="_blank" class="hover:opacity-80 transition-opacity"><img class="w-8 h-8"
-                                src="img/mail.png" alt="mail"></a></li>
-                    <li><a href="https://www.instagram.com/mr.debabratapaul?igsh=YzljYTk1ODg3Zg==" target="_blank"
-                            class="hover:opacity-80 transition-opacity"><img class="w-8 h-8" src="img/I.png"
-                                alt="Instagram"></a></li>
-                    <li><a href="https://wa.me/919093013606?text=Hello%20Debabrata%2C%20I%20want%20to%20connect%20with%20you"
-                            target="_blank" class="hover:opacity-80 transition-opacity"><img class="w-8 h-8"
-                                src="img/w.png" alt="Whatshapp"></a></li>
-                </ul>
-            </div>
-        </div>
+
+
 
     </section>
 
