--- a/src/index.html
+++ b/src/index.html
@@ -87,11 +87,16 @@
             <h2 class="text-lg sm:text-xl">Hi I am</h2>
             <h1 class="text-orange-500 font-bold text-2xl sm:text-3xl">Debabrata Paul</h1>
             <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold mt-2">Software</h1>
-            <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold">Engineer</h1>
+            <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold">__________Engineer</h1>
             <p class="my-4 text-base sm:text-lg lg:text-xl max-w-2xl mx-auto lg:mx-0">
-                Hi, I am software engineer with expertise in web development, IoT, and
-                emerging technologies. I love creating efficient, impactful applications while exploring new ideas and
-                solving real-world problems
+                Hi, I’m Debabrata Paul — a passionate developer skilled in Web Development, App Development, IoT, and
+                UI/UX Design.
+                I love building smart, user-friendly digital experiences that connect technology with creativity.
+
+                From responsive web apps to connected IoT systems, I focus on functionality, design, and performance.
+                I’m always exploring new tools and ideas to keep improving and create solutions that truly make an
+                impact.
+
             </p>
             <button
                 class="class1 bg-orange-500 hover:bg-orange-700  border-black transition-colors text-lg sm:text-xl px-6 py-3 my-2 rounded">Download
@@ -130,7 +135,7 @@
     <section id="about"
         class="my-12 sm:my-20 flex flex-col lg:flex-row justify-between items-center gap-8 p-4 max-w-7xl mx-auto">
 
-        <div class="hidden lg:block ml-20" >
+        <div class="hidden lg:block ml-20">
             <div class="w-full lg:w-1/2 flex flex-col items-center gap-4  ">
                 <div class="bg-white rounded-full w-64 h-64 sm:w-80 sm:h-80 overflow-hidden">
                     <img src="img/circle photo.png" alt="Profile picture" class="w-full h-full object-cover">
@@ -158,11 +163,9 @@
 
 
         <div class="w-full lg:w-1/2 text-center lg:text-left">
-            <h1 class="text-3xl sm:text-4xl font-bold mb-4">About me</h1>
+            <h1 class="text-3xl sm:text-4xl font-bold mb-4">My skills</h1>
             <p class="my-4 text-base sm:text-lg max-w-2xl mx-auto lg:mx-0">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed odit corporis voluptas eveniet magni
-                unde
-                cumque laboriosam distinctio, accusamus odio?
+                Hi
             </p>
             <div class="space-y-4 max-w-md mx-auto lg:mx-0">
                 <div>
@@ -208,8 +211,7 @@
                 class="class2 card-light border rounded-2xl bg-white text-black p-6 hover:hover  hover:bg-amber-600  transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/web.png" alt="Website icon">
                 <h2 class="text-lg font-semibold mb-2">Web Site</h2>
-                <p class="text-sm sm:text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit Tenetur
-                    consequatur</p>
+                <p class="text-sm sm:text-base"> ihdevcc</p>
             </div>
 
             <div
