--- a/src/index.html
+++ b/src/index.html
@@ -165,25 +165,24 @@
         <div class="w-full lg:w-1/2 text-center lg:text-left">
             <h1 class="text-3xl sm:text-4xl font-bold mb-4">My skills</h1>
             <p class="my-4 text-base sm:text-lg max-w-2xl mx-auto lg:mx-0">
-                Hi
+                I specialize in Web & App Development, IoT, and UI/UX Design, creating smart, user-friendly digital
+                solutions. I build responsive websites and apps, design intuitive interfaces, and develop IoT systems
+                that connect hardware and software seamlessly.
+
             </p>
             <div class="space-y-4 max-w-md mx-auto lg:mx-0">
                 <div>
-                    <label class="block mb-1">Fronted</label>
-                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="99">
-                </div>
-                <div>
-                    <label class="block mb-1">Backnend</label>
+                    <label class="block mb-1">Web Development</label>
                     <input class="w-full accent-orange-500" type="range" min="0" max="100" value="80">
                 </div>
                 <div>
                     <label class="block mb-1">APP Development</label>
-                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="70">
+                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="60">
                 </div>
 
                 <div>
-                    <label class="block mb-1">AOT</label>
-                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="90">
+                    <label class="block mb-1">IOT</label>
+                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="85">
                 </div>
                 <div>
                     <label class="block mb-1">UI & Ux</label>
@@ -202,8 +201,10 @@
     <section id="services" class="p-4 my-12 sm:my-20 max-w-7xl mx-auto">
         <h1 class="text-center text-2xl sm:text-3xl font-bold">Services</h1>
         <p class="text-center mt-2 text-sm sm:text-base max-w-2xl mx-auto">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum ab illo laboriosam facere
-            delectus adipisci magni sint ea architecto quia?
+            I offer a range of services to bring your ideas to life, including Website Development, Mobile App
+            Development, IoT Solutions, and UI/UX Design. Whether you need a responsive website, a user-friendly app,
+            smart connected devices, or intuitive interface design, I provide end-to-end solutions tailored to your
+            needs. My goal is to deliver high-quality, innovative, and practical results that help your project succeed.
         </p>
 
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6 mt-12 sm:mt-20  ">
@@ -211,15 +212,17 @@
                 class="class2 card-light border rounded-2xl bg-white text-black p-6 hover:hover  hover:bg-amber-600  transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/web.png" alt="Website icon">
                 <h2 class="text-lg font-semibold mb-2">Web Site</h2>
-                <p class="text-sm sm:text-base"> ihdevcc</p>
+                <p class="text-sm sm:text-base">I create responsive, fast, and visually appealing websites that deliver
+                    seamless user experiences across all devices.</p>
             </div>
 
             <div
                 class=" class2 card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block h-20" src="img/app.png" alt="App icon">
                 <h2 class="text-lg font-semibold mb-2">APP</h2>
-                <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
-                    consequatur.</p>
+                <p class="text-sm sm:text-base">I develop **intuitive, high-performance mobile apps** that engage users
+                    and provide smooth, reliable experiences.
+                </p>
             </div>
 
             <div
