--- a/src/index.html
+++ b/src/index.html
@@ -220,7 +220,7 @@
                 class=" class2 card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block h-20" src="img/app.png" alt="App icon">
                 <h2 class="text-lg font-semibold mb-2">APP</h2>
-                <p class="text-sm sm:text-base">I develop **intuitive, high-performance mobile apps** that engage users
+                <p class="text-sm sm:text-base">I develop intuitive, high-performance mobile apps that engage users
                     and provide smooth, reliable experiences.
                 </p>
             </div>
@@ -228,24 +228,20 @@
             <div
                 class=" class2 card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/UI.png" alt="UI icon">
-                <h2 class="text-lg font-semibold mb-2">UI</h2>
-                <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
-                    consequatur.</p>
+                <h2 class="text-lg font-semibold mb-2">IOT</h2>
+                <p class="text-sm sm:text-base">I create innovative IoT systems that connect devices, enable
+                    automation, and deliver real-time smart solutions.
+                </p>
             </div>
             <div
                 class="class2 card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/UI.png" alt="UI icon">
-                <h2 class="text-lg font-semibold mb-2">UI</h2>
-                <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
-                    consequatur.</p>
+                <h2 class="text-lg font-semibold mb-2">UI & UX</h2>
+                <p class="text-sm sm:text-base">I design clean, intuitive UI/UX interfaces that enhance user
+                    experience and make digital interactions seamless.
+                </p>
             </div>
 
-            <!-- <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
-                <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/ML.png" alt="ML icon">
-                <h2 class="text-lg font-semibold mb-2">ML</h2>
-                <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
-                    consequatur.</p>
-            </div> -->
         </div>
     </section>
 
@@ -329,8 +325,10 @@
     <section id="contact" class="p-4 my-12 sm:my-20 max-w-7xl mx-auto">
         <h1 class="text-center text-2xl sm:text-3xl font-bold">Let's work together</h1>
         <p class="text-center mt-2 text-sm sm:text-base max-w-2xl mx-auto">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum ab illo laboriosam facere
-            delectus adipisci magni sint ea architecto quia?
+            Let’s work together to build smart, creative, and user-friendly digital solutions that bring your ideas
+            to life. I’m excited to collaborate, share ideas, and turn your vision into reality with innovative web,
+            app, and IoT projects.
+
         </p>
 
         <div class="my-8 flex flex-col sm:flex-row justify-center gap-2 max-w-md mx-auto">
