--- a/src/index.html
+++ b/src/index.html
@@ -250,8 +250,9 @@
     <section id="projects" class="p-4 my-12 sm:my-20 max-w-7xl mx-auto">
         <h1 class="text-center text-2xl sm:text-3xl font-bold">My project</h1>
         <p class="text-center mt-2 text-sm sm:text-base max-w-2xl mx-auto">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum ab illo laboriosam facere
-            delectus adipisci magni sint ea architecto quia?
+            I create innovative projects ranging from web and app development to IoT and UI/UX design, delivering
+            practical, user-friendly, high-performance solutions. Let’s check those projects!
+
         </p>
 
         <div class="flex flex-wrap justify-center gap-2 mt-6 mb-8">
@@ -277,9 +278,9 @@
                 class="class2 class31 card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center max-h-[400px] ">
                 <img src="img/p_1.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">Weather Checking site</h2>
-                <p class="class4 text-sm ">Lorem ipsum, dolor sit amet consectetur adipisicing
-                    elit. Tenetur,
-                    consequatur.
+                <p class="class4 text-sm ">I built a live weather checking website that shows real-time weather
+                    updates, forecasts, and conditions.
+
                 </p>
 
                 <div class="hidden  gap-2 p-4 ">
@@ -298,9 +299,9 @@
                 class="class2 class32  card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center max-h-[400px] ">
                 <img src="img/p_2.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">x-clone</h2>
-                <p class="text-sm  class5">Lorem ipsum, dolor sit amet consectetur adipisicing
-                    elit. Tenetur,
-                    consequatur.
+                <p class="text-sm  class5">I built an X clone, recreating its core features with modern design,
+                    functionality, and smooth performance.
+
                 </p>
 
                 <div class=" hidden gap-2 p-4 ">
@@ -341,7 +342,7 @@
     </section>
 
     <footer class="text-center my-12 sm:my-20 text-sm sm:text-base">
-        &copy;2025 all copyright reserved
+        &copy;2025 All rights reserved. Created by Debabrata Paul.
     </footer>
     <script src="script.js"></script>
 </body>
