--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
 
             </p>
             <button
-                class="class1 bg-orange-500 hover:bg-orange-700  border-black transition-colors text-lg sm:text-xl px-6 py-3 my-2 rounded">Download
+                class="class1 bg-orange-500 hover:bg-orange-700  rounded-4xl border-black transition-colors text-lg sm:text-xl px-6 py-3 my-2 ">Download
                 CV</button>
 
         </div>
