--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="output.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.2/css/all.min.css">
+
 
 
 </head>
@@ -115,14 +117,14 @@
                             class="hover:opacity-80 transition-opacity"><img class="w-8 h-8" src="img/L.png"
                                 alt="LinkedIn"></a></li>
                     <li><a href="mailto:mr.debabratapaul2006@gmail.com?subject=Hello%20Debabrata&body=Hi%20there"
-                            target="_blank" class="hover:opacity-80 transition-opacity"><img class="w-8 h-8"
-                                src="img/im.jpg" alt="Mail"></a></li>
+                            target="_blank" class="hover:opacity-80 transition-opacity">
+                            <img class="w-8 h-9" src="img/im.jpg" alt="Mail"></a></li>
                     <li><a href="https://www.instagram.com/mr.debabratapaul?igsh=YzljYTk1ODg3Zg==" target="_blank"
                             class="hover:opacity-80 transition-opacity"><img class="w-8 h-8" src="img/I.png"
                                 alt="Instagram"></a></li>
                     <li><a href="https://wa.me/919093013606?text=Hello%20Debabrata%2C%20I%20want%20to%20connect%20with%20you"
-                            target="_blank" class="hover:opacity-80 transition-opacity"><img class="w-8 h-8"
-                                src="img/w.png" alt="Whatshapp"></a></li>
+                            target="_blank" class="hover:opacity-80 transition-opacity"><img
+                                class="w-8 h-8 bg-white rounded-2xl" src="img/whatsapp.svg" alt="Whatshapp"></a></li>
                 </ul>
             </div>
         </div>
@@ -142,19 +144,20 @@
                 </div>
 
                 <div>
-                    <ul class="flex gap-4 p-2">
+                    <ul class="flex gap-3 p-2">
                         <li><a href="https://www.linkedin.com/in/debabrata2024" target="_blank"
-                                class="hover:opacity-80 transition-opacity"><img class="w-8 h-8" src="img/L.png"
+                                class="hover:opacity-80 transition-opacity"><img class="w-14 h-9" src="img/L.png"
                                     alt="LinkedIn"></a></li>
                         <li><a href="mailto:mr.debabratapaul2006@gmail.com?subject=Hello%20Debabrata&body=Hi%20there"
                                 target="_blank" class="hover:opacity-80 transition-opacity"><img class="w-8 h-8"
                                     src="img/im.jpg" alt="Mail"></a></li>
                         <li><a href="https://www.instagram.com/mr.debabratapaul?igsh=YzljYTk1ODg3Zg==" target="_blank"
-                                class="hover:opacity-80 transition-opacity"><img class="w-8 h-8" src="img/I.png"
+                                class="hover:opacity-80 transition-opacity"><img class="w-14 h-9" src="img/I.png"
                                     alt="Instagram"></a></li>
                         <li><a href="https://wa.me/919093013606?text=Hello%20Debabrata%2C%20I%20want%20to%20connect%20with%20you"
-                                target="_blank" class="hover:opacity-80 transition-opacity"><img class="w-8 h-8"
-                                    src="img/w.png" alt="Whatshapp"></a></li>
+                                target="_blank" class="hover:opacity-80 transition-opacity"><img
+                                    class="w-14 h-8 bg-white rounded-2xl " src="img/whatsapp.svg" alt="Whatshapp"></a>
+                        </li>
                     </ul>
                 </div>
             </div>
