--- a/src/index.html
+++ b/src/index.html
@@ -101,8 +101,7 @@
 
             </p>
             <button
-                class="class1 bg-orange-500 hover:bg-orange-700  rounded-4xl border-black transition-colors text-lg sm:text-xl px-6 py-3 my-2 ">Download
-                CV</button>
+                class="class1 bg-orange-500 hover:bg-orange-700  rounded-4xl border-black transition-colors text-lg sm:text-xl px-6 py-3 my-2 "> <a href="img/Debabrata_Resume.pdf">Download CV</a> </button>
 
         </div>
 
