--- a/src/index.html
+++ b/src/index.html
@@ -175,20 +175,20 @@
             <div class="space-y-4 max-w-md mx-auto lg:mx-0">
                 <div>
                     <label class="block mb-1">Web Development</label>
-                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="80">
+                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="80" style="pointer-events: none;">
                 </div>
                 <div>
                     <label class="block mb-1">APP Development</label>
-                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="60">
+                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="60" style="pointer-events: none;">
                 </div>
 
                 <div>
                     <label class="block mb-1">IOT</label>
-                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="85">
+                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="85" style="pointer-events: none;">
                 </div>
                 <div>
                     <label class="block mb-1">UI & Ux</label>
-                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="90">
+                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="90" style="pointer-events: none;">
                 </div>
             </div>
         </div>
@@ -284,7 +284,7 @@
                     updates, forecasts, and conditions.
 
                 </p>
-
+<!-- 
                 <div class="hidden  gap-2 p-4 ">
                     <div>
 
@@ -294,9 +294,9 @@
                     <div class="my-2">
                         <button class="p-2 border rounded-xl"><a href="#">Watch Demo </a></button>
                     </div>
-                </div>
+                </div> -->
             </div>
-
+<!-- 
             <div
                 class="class2 class32  card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center max-h-[400px] ">
                 <img src="img/p_2.png" alt="Project" class="w-full mb-4 rounded">
@@ -306,7 +306,7 @@
 
                 </p>
 
-                <div class=" hidden gap-2 p-4 ">
+                <div class="hidden gap-2 p-4 ">
                     <div>
 
                         <button class="p-2 border rounded-xl"><a href="#">Github</a></button>
@@ -316,7 +316,7 @@
                         <button class="p-2 border rounded-xl"><a href="#">Watch Demo </a></button>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
 
 
